--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,92 +13,32 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivLogLogo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="90dp"
+            android:layout_gravity="left"
             android:layout_marginBottom="6dp"
             android:background="@color/colorPrimary"
             android:contentDescription="@string/uni_text"
-            android:padding="15dp"
-            android:scaleType="fitCenter"
             android:src="@drawable/uni_logo" />
 
         <TextView
-            android:id="@+id/ivSignIn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="12dp"
-            android:background="@color/colorPrimaryDark"
-            android:fontFamily="@font/promptregular"
-            android:padding="8dp"
-            android:text="@string/uni_text"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <RadioGroup
-            android:id="@+id/radioMain"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="12dp"
-            android:orientation="horizontal"
-            android:padding="2dp">
-
-            <RadioButton
-                android:id="@+id/student_radio"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/et_bg_no_padding"
-                android:buttonTint="@color/colorAccent"
-                android:checked="true"
-                android:drawableLeft="@drawable/commuter_icon"
-                android:gravity="center"
-                android:text="Commuter"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-            <RadioButton
-                android:id="@+id/teacher_radio"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/et_bg_no_padding"
-                android:buttonTint="@color/colorAccent"
-                android:drawableStart="@drawable/driver_icon"
-                android:gravity="center"
-                android:text="Driver"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-            <RadioButton
-                android:id="@+id/admin_radio"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/et_bg_no_padding"
-                android:buttonTint="@color/colorAccent"
-                android:drawableStart="@drawable/guardian_icon"
-                android:gravity="center"
-                android:text="@string/guardian"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-        </RadioGroup>
-
+            android:layout_marginLeft="15dp"
+            android:layout_margin="@dimen/padding_10dp"
+            android:textSize="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="left"
+            android:textStyle="bold"
+            android:textColor="@android:color/darker_gray"
+            android:text="Sign in to continue"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_5dp"
             android:layout_marginRight="@dimen/margin_5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="2dp"
             android:orientation="vertical"
             android:padding="5dp">
@@ -106,26 +46,29 @@
             <EditText
                 android:id="@+id/inputEmail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/et_bg"
                 android:drawableStart="@drawable/email"
-                android:hint=" Email"
+                android:hint="  Email"
+                android:textStyle="bold"
+                android:textColor="@android:color/darker_gray"
                 android:inputType="textEmailAddress" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/et_bg"
                 android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/inputPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/et_bg_no_padding"
+                    android:layout_height="60dp"
+                    android:background="@drawable/et_bg"
                     android:drawableStart="@drawable/ic_pass"
-                    android:hint="@string/password"
+                    android:hint="  Password"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/darker_gray"
                     android:inputType="textPassword"
                     android:maxLength="30"
                     android:singleLine="true" />
@@ -134,7 +77,7 @@
                     android:id="@+id/show_pass_icon"
                     style="?android:buttonBarButtonStyle"
                     android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_height="60dp"
                     android:layout_marginStart="-40dp"
                     android:contentDescription="Show/Hide Password"
                     app:srcCompat="@drawable/ic_visibility" />
@@ -151,24 +94,25 @@
             android:layout_marginBottom="12dp"
             android:background="@color/app_background_blue"
             android:gravity="right"
-            android:padding="4dp"
+            android:padding="6dp"
             android:text="@string/forgot_password"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="18dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
 
         <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="260dp"
-            android:layout_height="wrap_content"
+            android:layout_width="270dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginBottom="18dp"
-            android:background="@drawable/text_background_primary"
-            android:text="SIGN IN"
+            android:background="@color/colorPrimaryDark"
+            android:text="Login"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="22dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -186,8 +130,9 @@
                 android:padding="5dp"
                 android:text="@string/registerhere"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp" />
+                android:textStyle="bold"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="18dp" />
 
 
             <TextView
@@ -200,7 +145,7 @@
                 android:text="Sign Up"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="15dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
