--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,236 +5,206 @@
     android:layout_height="wrap_content"
     android:background="@color/app_background_blue">
 
-    <RelativeLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivLogLogo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="6dp"
+            android:background="@color/colorPrimary"
+            android:contentDescription="@string/uni_text"
+            android:padding="15dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/uni_logo" />
+
+        <TextView
+            android:id="@+id/ivSignIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="12dp"
+            android:background="@color/colorPrimaryDark"
+            android:fontFamily="@font/promptregular"
+            android:padding="8dp"
+            android:text="Transport Facility Registration"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="@dimen/margin_5dp"
+            android:layout_marginRight="@dimen/margin_5dp"
+            android:layout_marginBottom="2dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-            <ImageView
-                android:id="@+id/ivLogLogo"
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="6dp"
-                android:background="@color/colorPrimary"
-                android:contentDescription="@string/uni_text"
-                android:padding="15dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/uni_logo" />
-
-            <TextView
-                android:id="@+id/ivSignIn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
-                android:background="@color/colorPrimaryDark"
-                android:fontFamily="@font/promptregular"
-                android:padding="8dp"
-                android:text="Transport Facility Registration"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20dp"
+                android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/et_bg"
+                android:drawableStart="@drawable/ic_person"
+                android:hint="  Name"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/darker_gray"
                 android:textStyle="bold" />
 
-            <RadioGroup
-                android:id="@+id/radioMain"
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
-                android:orientation="horizontal"
-                android:padding="2dp">
+                android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/et_bg"
+                android:drawableStart="@drawable/id_number"
+                android:hint="  Registration ID"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/darker_gray"
+                android:textStyle="bold" />
 
-                <RadioButton
-                    android:id="@+id/student_radio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/et_bg_no_padding"
-                    android:buttonTint="@color/colorAccent"
-                    android:checked="true"
-                    android:drawableLeft="@drawable/commuter_icon"
-                    android:gravity="center"
-                    android:text="Commuter"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12dp"
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/et_bg"
+                android:drawableStart="@drawable/mobile_icon"
+                android:hint="  Mobile Number"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/darker_gray"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/inputEmail"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/et_bg"
+                android:drawableStart="@drawable/email"
+                android:hint="  Email"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/darker_gray"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/inputPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="@drawable/et_bg"
+                    android:drawableStart="@drawable/ic_pass"
+                    android:hint="  Password"
+                    android:inputType="textPassword"
+                    android:maxLength="30"
+                    android:singleLine="true"
+                    android:textColor="@android:color/darker_gray"
                     android:textStyle="bold" />
 
-                <RadioButton
-                    android:id="@+id/teacher_radio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/et_bg_no_padding"
-                    android:buttonTint="@color/colorAccent"
-                    android:drawableStart="@drawable/driver_icon"
-                    android:gravity="center"
-                    android:text="Driver"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12dp"
-                    android:textStyle="bold" />
+                <ImageButton
+                    android:id="@+id/show_pass_icon"
+                    style="?android:buttonBarButtonStyle"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="-40dp"
+                    android:contentDescription="Show/Hide Password"
+                    app:srcCompat="@drawable/ic_visibility" />
+            </LinearLayout>
 
-                <RadioButton
-                    android:id="@+id/admin_radio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/et_bg_no_padding"
-                    android:buttonTint="@color/colorAccent"
-                    android:drawableStart="@drawable/guardian_icon"
-                    android:gravity="center"
-                    android:text="@string/guardian"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12dp"
-                    android:textStyle="bold" />
-
-            </RadioGroup>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_5dp"
-                android:layout_marginRight="@dimen/margin_5dp"
-                android:layout_marginBottom="2dp"
-                android:orientation="vertical"
-                android:padding="5dp">
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/et_bg"
+                android:orientation="horizontal">
 
-
-                <EditText
-                    android:id="@+id/registerFullName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:drawableStart="@drawable/ic_name"
-                    android:hint=" Enter your full name"
-                    android:inputType="textCapWords"
-                    android:singleLine="true" />
-
-
-                <EditText
-                    android:id="@+id/registerEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:drawableStart="@drawable/email"
-                    android:hint=" Your email goes here"
-                    android:inputType="textEmailAddress" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/registerPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/et_bg_no_padding"
-                        android:drawableStart="@drawable/ic_pass"
-                        android:hint="@string/password"
-                        android:inputType="textPassword"
-                        android:maxLength="30"
-                        android:singleLine="true" />
-
-                    <ImageButton
-                        android:id="@+id/show_pass_icon"
-                        style="?android:buttonBarButtonStyle"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="-40dp"
-                        android:contentDescription="Show/Hide Password"
-                        app:srcCompat="@drawable/ic_visibility" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:orientation="horizontal">
-
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:singleLine="true"
-                        android:text="I agree all the statements in terms of service"
-                        android:textSize="14dp" />
-
-                </LinearLayout>
-
-
-                <Button
-                    android:id="@+id/registerButton"
-                    android:layout_width="260dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/text_background_primary"
-                    android:text="@string/SignUp"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/padding_10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/registerText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="right"
-                        android:padding="5dp"
-                        android:text="Already have an account?"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="15dp" />
-
-
-                    <TextView
-                        android:id="@+id/tvSignUp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.8"
-                        android:gravity="left"
-                        android:padding="5dp"
-                        android:text="Sign In"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-
-                <ProgressBar
-                    android:id="@+id/loadingSignUp"
+                <CheckBox
                     android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:indeterminate="true"
-                    android:visibility="invisible" />
+                    android:padding="10dp"
+                    android:text="I confirm that the information given in this form is true, complete and accurate."
+                    android:textSize="14dp" />
+
             </LinearLayout>
+
+
+            <Button
+                android:id="@+id/registerButton"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="Sign Up"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/padding_10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/registerText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:padding="5dp"
+                    android:text="Already have an account?"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="18dp" />
+
+
+                <TextView
+                    android:id="@+id/tvSignUp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.8"
+                    android:gravity="left"
+                    android:padding="5dp"
+                    android:text="Sign In"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="22dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+            <ProgressBar
+                android:id="@+id/loadingSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:visibility="invisible" />
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
